--- a/shop.html
+++ b/shop.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add to cart</title>
+    <title>Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="addcart.css">
+    <link rel="stylesheet" href="shopNow.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <section>
@@ -53,28 +54,13 @@
             </div>
           </nav> 
     </section>
-    <section>
+    <section class="pt-5">
         <div class="container pt-5 text-center">
-            <h1 class="fw-bold display-5">Add To Cart List</h1>
-            <hr class="w-25 mx-auto border-2 opacity-100">
         </div>
-    </section>
-    <section class="cart-section container">
-        <div class="cart-header px-5 d-grid grid-template">
-            <p>Product</p>
-            <p>Price</p>
-            <p>Quantity</p>
-            <p>Subtotal</p>
-        </div>
-        <div id="addtocartCont"></div>
-    </section>  
-    <section class="container bg-light py-4">
-      <div class="container text-center border rounded p-4 shadow-sm">
-        <h4 class="mb-3">Total</h4>
-        <p id="totalPrice" class="h5 mb-4">₹0</p>
-        <button class="btn btn-primary btn-lg">Proceed To Buy</button>
-      </div>
-    </section>          
-    <script src="addcart.js"></script>
+    </section>    
+    <section id="shopContainer1"></section>
+    <section id="shopContainer2"></section>
+    <section id="shopContainer3"></section>
+    <script src="shop.js"></script>
 </body>
 </html>
