--- a/home.html
+++ b/home.html
@@ -45,10 +45,10 @@
       
             <!-- Cart Button -->
             <div class="d-none d-lg-block">
-              <button onclick="wishList()" class="btn btn-outline-light">
-                <a href="./wishlist.html"><i class="fa-solid fa-shield-heart"></i></a>
+              <button onclick="wishList()" class="btn">
+                <a href="./wishlist.html"><i class="fa-solid fa-heart"></i></a>
               </button>
-              <button onclick="addToCart()" class="btn btn-outline-light">
+              <button onclick="addToCart()" class="btn">
                 <a href="./addcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
               </button>
             </div>
@@ -135,10 +135,10 @@
           <div class="col-lg-6">
             <div class="row g-3">
               <div class="col-7">
-                <img src="/Home Page Images/homeimages1.jpg" alt="Florist 1" class="img-fluid w-100 custom-img" id="aboutImg1"/>
+                <img src="/Home Page Images/homeimage1.jpg" alt="Florist 1" class="img-fluid w-100 custom-img" id="aboutImg1"/>
               </div>
               <div class="col-5">
-                <img src="/Home Page Images/homeimages2.jpg" alt="Florist 2" class="img-fluid w-100 custom-img" id="aboutImg2"/>
+                <img src="/Home Page Images/homeimage2.jpg" alt="Florist 2" class="img-fluid w-100 custom-img" id="aboutImg2"/>
               </div>
             </div>
           </div>
@@ -169,10 +169,10 @@
       <div class="col-lg-6">
         <div class="row g-3">
           <div class="col-7">
-            <img src="/Home Page Images/homeimages1.jpg" alt="Florist 1" class="img-fluid w-100 custom-img" id="aboutImg1" />
+            <img src="/Home Page Images/specialoffer1.jpg" alt="Florist 1" class="img-fluid w-100 custom-img" id="aboutImg1" />
           </div>
           <div class="col-5">
-            <img src="/Home Page Images/homeimages2.jpg" alt="Florist 2" class="img-fluid w-100 custom-img" id="aboutImg2" />
+            <img src="/Home Page Images/specialoffer2.jpg" alt="Florist 2" class="img-fluid w-100 custom-img" id="aboutImg2" />
           </div>
         </div>
       </div>
@@ -231,7 +231,7 @@
             <p class="text-warning mb-2 fs-3">★★★★★</p>
             <p class="text-muted">I've been a loyal customer of Florist for years, and they never cease to amaze me. The flowers are always fresh, the arrangements are stunning, and the service is top-notch.</p>
             <div class="d-flex align-items-center justify-content-center mt-3">
-              <img src="/Home Page Images/profilImages.jpg" class="rounded-circle me-3" alt="Steve Smith" style="width: 60px; height: 60px; object-fit: cover;">
+              <img src="/Home Page Images/profilimage1.jpg" class="rounded-circle me-3" alt="Steve Smith" style="width: 60px; height: 60px; object-fit: cover;">
               <div class="text-start">
                 <p class="mb-0 fw-semibold">Steve Smith</p>
                 <small class="text-muted">Wedding Planner</small>
@@ -246,7 +246,7 @@
             <p class="text-warning mb-2 fs-3">★★★★★</p>
             <p class="text-muted">I've been a loyal customer of Florist for years, and they never cease to amaze me. The flowers are always fresh, the arrangements are stunning, and the service is top-notch.</p>
             <div class="d-flex align-items-center justify-content-center mt-3">
-              <img src="/Home Page Images/profilImages.jpg" class="rounded-circle me-3" alt="Steve Smith" style="width: 60px; height: 60px; object-fit: cover;">
+              <img src="/Home Page Images/profilimage2.jpg" class="rounded-circle me-3" alt="Steve Smith" style="width: 60px; height: 60px; object-fit: cover;">
               <div class="text-start">
                 <p class="mb-0 fw-semibold">Wade Warren</p>
                 <small class="text-muted">Designer</small>
@@ -261,7 +261,7 @@
             <p class="text-warning mb-2 fs-3">★★★★★</p>
             <p class="text-muted">I've been a loyal customer of Florist for years, and they never cease to amaze me. The flowers are always fresh, the arrangements are stunning, and the service is top-notch.</p>
             <div class="d-flex align-items-center justify-content-center mt-3">
-              <img src="/Home Page Images/profilImages.jpg" class="rounded-circle me-3" alt="Steve Smith" style="width: 60px; height: 60px; object-fit: cover;">
+              <img src="/Home Page Images/profilimage3.jpg" class="rounded-circle me-3" alt="Steve Smith" style="width: 60px; height: 60px; object-fit: cover;">
               <div class="text-start">
                 <p class="mb-0 fw-semibold">Mila Kunis</p>
                 <small class="text-muted">Business Owner</small>
