--- a/about.html
+++ b/about.html
@@ -22,20 +22,20 @@
       
             <div class="collapse navbar-collapse justify-content-center" id="navbarResponsive">
               <ul class="navbar-nav d-flex flex-row flex-lg-row gap-3 text-center">
-                <li class="nav-item"><a class="nav-link active text-white" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link active text-white" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link active text-white" href="#">Shop</a></li>
+                <li class="nav-item"><a class="nav-link active text-white" href="./home.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link active text-white" href="./about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link active text-white" href="./shop.html">Shop</a></li>
                 <li class="nav-item"><a class="nav-link active text-white" href="#">Contact</a></li>
-                <li class="nav-item"><a class="nav-link active text-white" href="#">Login</a></li>
+                <li class="nav-item"><a class="nav-link active text-white" href="./Login.html">Login</a></li>
               </ul>
             </div>
       
             <div class="d-none d-lg-block">
-              <button onclick="addToCart()" class="btn btn-outline-light">
-                <i class="fa-solid fa-shield-heart"></i>
+              <button onclick="wishList()" class="btn">
+                <a href="./wishlist.html"><i class="fa-solid fa-heart"></i></a>
               </button>
-              <button onclick="addToCart()" class="btn btn-outline-light">
-                <i class="fa-solid fa-cart-shopping"></i>
+              <button onclick="addToCart()" class="btn">
+                <a href="./addcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
               </button>
             </div>
           </div>
