--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="home.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 </head>
 <body>
@@ -37,9 +38,8 @@
                 <li class="nav-item">
                   <a class="nav-link active text-white" href="#">Contact</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active text-white" href="./Login.html">Login</a>
-                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link active text-white" href="./Login.html">Login</a>            
               </ul>
             </div>
       
@@ -231,7 +231,7 @@
             <p class="text-warning mb-2 fs-3">★★★★★</p>
             <p class="text-muted">I've been a loyal customer of Florist for years, and they never cease to amaze me. The flowers are always fresh, the arrangements are stunning, and the service is top-notch.</p>
             <div class="d-flex align-items-center justify-content-center mt-3">
-              <img src="/Home Page Images/profilimage1.jpg" class="rounded-circle me-3" alt="Steve Smith" style="width: 60px; height: 60px; object-fit: cover;">
+              <img src="/Home Page Images/profilimage1.png" class="rounded-circle me-3" alt="Steve Smith" style="width: 60px; height: 60px; object-fit: cover;">
               <div class="text-start">
                 <p class="mb-0 fw-semibold">Steve Smith</p>
                 <small class="text-muted">Wedding Planner</small>
