--- a/shop.html
+++ b/shop.html
@@ -44,20 +44,25 @@
         
               <!-- Cart Button -->
               <div class="d-none d-lg-block">
-                <button onclick="addToCart()" class="btn btn-outline-light">
-                  <i class="fa-solid fa-shield-heart"></i>
+                <button onclick="wishList()" class="btn">
+                  <a href="./wishlist.html"><i class="fa-solid fa-heart"></i></a>
                 </button>
-                <button onclick="addToCart()" class="btn btn-outline-light">
-                  <i class="fa-solid fa-cart-shopping"></i>
+                <button onclick="addToCart()" class="btn">
+                  <a href="./addcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 </button>
               </div>
             </div>
           </nav> 
     </section>
     <section class="pt-5">
-        <div class="container pt-5 text-center">
-        </div>
-    </section>    
+      <div class="pt-5 d-flex flex-wrap gap-3 justify-content-center my-4">
+        <button class="btn btn-outline-danger btn-lg" id="momBtn">Mom Gifts</button>
+        <button class="btn btn-outline-info btn-lg" id="artBtn">Art Gifts</button>
+        <button class="btn btn-outline-success btn-lg" id="coupleBtn">Couple Gifts</button>
+        <button class="btn btn-outline-dark btn-lg" id="allGiftsBtn">All Gifts</button>
+      </div>      
+      <div class="container pt-3 text-center" id="giftContainer"></div>
+    </section>     
     <section id="shopContainer1"></section>
     <section id="shopContainer2"></section>
     <section id="shopContainer3"></section>
