--- a/home.html
+++ b/home.html
@@ -51,6 +51,9 @@
               <button onclick="addToCart()" class="btn">
                 <a href="./addcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
               </button>
+              <button onclick="logout()" class="btn btn-outline-light ms-2">
+                Logout
+              </button>
             </div>
           </div>
         </nav>
